deployments/ui/charts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  namespace: graphql-test
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ui
  template:
    metadata:
      labels:
        component: ui
    spec:
      containers:
        - name: ui
          image: graphql-test-ui:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "1G"
              cpu: "500m"
