deployments/ui/charts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: graphql-test
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    component: ui
