deployments/ui/charts/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: graphql-test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: ui-service
              servicePort: 80
